<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AD Belém</string>
    <string name="key_google_map_dev_call">AIzaSyAElC9Tt2G808nMjmXAWlhCpCQp29DhPmY</string>
    <string name="key_google_map_dev_home">AIzaSyDMZyS6lXWYfXrWzkyOhyipu0mCL_HpBo4</string>
    <string name="information">INFORMAÇÕES</string>
    <string name="location">LOCALIZAÇÃO</string>
    <string name="agenda">Agenda</string>
    <string name="uninformed">Não informado</string>

    <!-- Menu -->
    <string name="menu_churches">Igrejas</string>
    <string name="menu_near_churches">Igrejas Próximas</string>
    <string name="menu_my_churches">Minhas Igrejas</string>
    <string name="menu_youtube">You Tube</string>
    <string name="menu_events">Meus Eventos</string>
    <string name="menu_about">Sobre</string>

    <!-- Fragment Igrejas -->
    <string name="try_again">Tentar Novamente</string>
    <string name="error_find_churches">Erro ao buscar as igrejas</string>
    <string name="no_church">Nenhuma igreja encontrada</string>

    <!-- Fragment Sobre -->
    <string name="about">\tA Assembleia de Deus Belém é uma igreja cristã evangélica. O presidente nacional é o Pastor José Wellington Bezerra da Costa presidente também da CGADB.
        \n\n\tComo uma igreja pentecostal, a Assembleias de Deus Ministério Belém acreditam no batismo por meio do Espírito Santo, evidenciado por meio do falar em línguas; no arrebatamento da igreja por Cristo e na doutrina da Santa Trindade.</string>

    <!-- Fragment Church Detail -->
    <string name="church_detail_worship">CULTOS SEMANAIS</string>
    <string name="church_detail_no_worship">Nenhum culto programado</string>

    <!-- Fragment Near Churches -->
    <string name="near_churches_error">Erro ao buscar igrejas próximas</string>
    <string name="near_churches_search_address">Pesquisar endereço</string>

    <!--Fragment My Events-->
    <string name="error_find_events">Erro ao buscar seus eventos</string>
    <string name="no_my_event">Você não está participando de algum evento...</string>

    <!-- Activity ChurchDetail -->
    <string name="error_find_worship">Erro ao buscar os cultos da igreja</string>
    <string name="church_detail_congregations">Congregações</string>
    <string name="church_detail_follow">Seguir</string>
    <string name="church_detail_more">Mais detalhes</string>
    <string name="church_detail_unfollow">Deixar de seguir</string>
    <string name="church_detail_follow_message">Você está seguindo a igreja %s</string>
    <string name="church_detail_unfollow_message">Você parou de seguir a igreja %s</string>
    <string name="church_detail_confirm_call_title">Confirmação</string>
    <string name="church_detail_confirm_call_message">Deseja realizar a ligação?</string>
    <string name="church_detail_confirm">Confirmar</string>

    <!-- MainActivity -->
    <string name="main_activity_quit">Click duas vezes para sair.</string>

    <!-- Event Activity -->
    <string name="event_acitivty_no_event">Nenhum evento programado...</string>
    <string name="event_acitivty_follow_message">Você está seguindo o evento %s</string>
    <string name="event_acitivty_unfollow_message">Você deixou de seguir o evento %s</string>

    <!--YouTube Fragment-->
    <string name="youtube_no_video">No momento estamos sem vídeos</string>

    <!-- Day of The Week -->
    <string name="sunday">Domingo</string>
    <string name="monday">Segunda-feira</string>
    <string name="tuesday">Terça-feira</string>
    <string name="wednesday">Quarta-feira</string>
    <string name="thursday">Quinta-feira</string>
    <string name="friday">Sexta-feira</string>
    <string name="saturday">Sábado</string>

    <!-- Erros -->
    <string name="falha_conexao">Falha na Conexão</string>
    <string name="exception_erro">ERRO</string>
    <string name="exception_erro_desconhecido">Erro desconhecido</string>
    <string name="exception_erro_400_bad_request">Não foi possível localizar o endereço solicitado</string>
    <string name="exception_erro_401_unauthorized">Usuário ou Senha inválidos</string>
    <string name="exception_erro_500_internal_server_error">Ah, que pena, nosso servidor encontra-se em manutenção, tente mais tarde!</string>
    <string name="exception_erro_502_bad_gateway">Ah, que pena, não foi possível comunicar-se com o serviço, posíveis causas: Gateway/Proxy</string>
    <string name="exception_erro_408_bad_gateway">Não foi possível efetuar login, verifique sua conexão com a internet.</string>
    <string name="exception_erro_504_gateway_time_out">Ah, que pena, não foi possível buscar a requisição no tempo máximo de espera</string>
    <string name="sem_gps_mensagem">Ops! Não foi possível acessar a sua localização atual. Verifique o status do seu GPS.</string>
    <string name="exception_erro_err_internet_disconnected">Não foi possível encontrar conexão com a internet. Tente novamente!</string>
</resources>
