<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.vagnnermartins.adbelem.ui.activity.ChurchDetailActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/information"
                    android:textAllCaps="true"
                    android:textColor="?attr/colorAccent"
                    android:textSize="18sp" />

                <LinearLayout
                    android:id="@+id/church_detail_phone_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_phone" />

                    <TextView
                        android:id="@+id/church_detail_phone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="9.5"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="(11) 2742-6452"
                        android:textColor="@android:color/holo_blue_dark" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/church_detail_website_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_website" />

                    <TextView
                        android:id="@+id/church_detail_website"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="9.5"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="www.adbelem.com.br"
                        android:textColor="@android:color/holo_blue_dark" />

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/church_detail_pastor_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_pastor" />

                    <TextView
                        android:id="@+id/church_detail_pastor"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="9.5"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="Pr. José Wellington" />

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="0.1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="7dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="7dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/church_detail_agenda"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/agenda"
                    android:textAllCaps="true"
                    android:textColor="?attr/colorAccent"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Consultar horarios de eventos" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/church_detail_worship_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginBottom="7dp"
                android:layout_marginTop="7dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/church_detail_worship"
                android:textAllCaps="true"
                android:textColor="?attr/colorAccent"
                android:textSize="18sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.gc.materialdesign.views.ProgressBarCircularIndeterminate
                    android:id="@+id/church_detail_worship_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@color/churches" />

                <TextView
                    android:id="@+id/church_detail_worship_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/church_detail_no_worship"
                    android:visibility="gone" />
            </RelativeLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true">

                <LinearLayout
                    android:id="@+id/church_detail_worship_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="horizontal" />

            </HorizontalScrollView>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textAllCaps="true"
            android:textColor="?attr/colorAccent"
            android:textSize="18sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="7dp">

        <LinearLayout
            android:id="@+id/church_detail_map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" />

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginLeft="7dp"
            card_view:cardCornerRadius="4dp">

            <TextView
                android:id="@+id/church_detail_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="45dp"/>
        </android.support.v7.widget.CardView>

        <com.gc.materialdesign.views.ButtonFloat
            android:id="@+id/church_detail_my_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="17dp"
            android:background="@android:color/white"
            materialdesign:animate="true"
            materialdesign:iconDrawable="@drawable/ic_location" />
    </RelativeLayout>
</LinearLayout>
